<resources>
    <string name="app_name">MarlieskePsetFinal</string>
    <string name="or_go_to_playlist">Or go to Playlist</string>
    <string name="load">LOAD</string>
    <string name="go">GO</string>
    <string name="search_songs_or_playlist">Search for your favourite songs, or go to playlist!</string>
    <string name="password">password</string>
    <string name="WelcomeString">Welcome to BrowseFM! Create an account and browse through millions of tracks.</string>
    <string name="sign_up">Sign Up</string>
    <string name="ETPW1">Password</string>
    <string name="ETPW2">confirm password</string>
    <string name="username">username</string>
    <string name="remove_list">Remove from playlist</string>
    <string name="add_list">Add to Playlist</string>
    <string name="signed_in">"Signed in as "</string>
    <string name="browse">Browse</string>
    <string name="add_to_list">Add to list</string>
    <string name="check_what_s_hot">Check what\'s hot</string>
    <string name="sign_out">Sign out</string>
    <string name="song">Song</string>
    <string name="def_mail">user@email.com</string>
    <string name="login_description">Sign up for FREE Pick a username and password, and start Browsing!</string>
</resources>
